--- a/frontend/natiart-app/src/app/product/components/customer/checkout/user-info-step/user-info-step.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/checkout/user-info-step/user-info-step.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="userInfoGroup" class="space-y-4">
-  <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-4 gap-y-3">
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
     <app-natiart-form-field label="First Name" controlName="firstname" [form]="userInfoGroup">
       <input formControlName="firstname" id="firstname" type="text" placeholder="John" class="form-input">
     </app-natiart-form-field>
@@ -13,7 +13,7 @@
     <input formControlName="email" id="email" type="email" placeholder="you@example.com" class="form-input">
   </app-natiart-form-field>
 
-  <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-4 gap-y-3">
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
     <app-natiart-form-field label="CPF" controlName="cpf" [form]="userInfoGroup">
       <input formControlName="cpf" id="cpf" type="text" placeholder="000.000.000-00" cpfFormat class="form-input">
     </app-natiart-form-field>
